Elimino dos logotipos y agrego detalles en el css

--- a/index.html
+++ b/index.html
@@ -62,30 +62,14 @@
 			</div>						
 		</section>
 		<section id="clientes">
-		<p>Ellos  nos prefieren</p>
-			<div id="logotipos">
-				<li>
-					<img src="images/logo1.png">
-				</li>
-				<li>
-					<img src="images/logo2.png">
-				</li>
-				<li>
-					<img src="images/logo3.png">			
-				</li>
-				<li>
-					<img src="images/logo4.png">
-				</li>
-				<li>
-					<img src="images/logo5.png">
-				</li>
-				<li>
-					<img src="images/logo6.png">
-				</li>
-				<li>
-					<img src="images/logo7.png">
-				</li>
-			</div>
+			<p>Ellos ya nos eligieron</p>
+			<ul>
+				<li><img src="images/logo1.png"></li>
+				<li><img src="images/logo2.png"></li>
+				<li><img src="images/logo4.png"></li>
+				<li><img src="images/logo6.png"></li>
+				<li><img src="images/logo3.png"></li>
+			</ul>
 		</section>
 		<footer id="contacto">
 			<div id="montevideo">
