Agrego archivo de mediaqueries y declaracones para 1920px

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel="stylesheet" type="text/css" href="css/stylesheets.css">
+		<link rel="stylesheet" type="text/css" href="css/mediaqueries.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,200,600,300italic,200italic,400italic,600italic' rel='stylesheet' type='text/css'>
 
